<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:id="@+id/person_layout"
    >

    <RelativeLayout
        android:id="@+id/avatar_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#212121"
        >

        <ImageButton
            android:id="@+id/setting_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:src="@mipmap/setting2"
            android:background="#00000000"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/app_name" />

        <zippler.cn.xs.component.CircleImageView
            android:translationZ="10dp"
            android:id="@+id/avatar_image_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/avatar" />

        <LinearLayout
            android:id="@+id/more_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_below="@id/avatar_image_view"
            >
            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textAlignment="center"
                android:layout_gravity="center"

                android:textColor="#eeeeee"
                android:textSize="18sp" />
            <ImageButton
                android:id="@+id/more_info"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:background="#00ffffff"
                android:src="@mipmap/right"
                android:contentDescription="@string/more" />
        </LinearLayout>

    </RelativeLayout>



    <!--选项卡-->

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/person_sub_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ef212121"
        >
        <android.support.design.widget.TabLayout
            android:id="@+id/me_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:fillViewport="false"
            app:tabMode="fixed"
            app:layout_scrollFlags="scroll"

            style="@style/me_tab_state"

            app:tabSelectedTextColor="#ced0d3"
            app:tabTextColor="#ced0d3">


            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="My contribution"
                android:icon="@mipmap/file"
                />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="I like"
                android:icon="@mipmap/love"/>

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:icon="@mipmap/person"
                android:text="my fans"
                />

        </android.support.design.widget.TabLayout>



        <android.support.v4.view.ViewPager
            android:id="@+id/me_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />


    </LinearLayout>


</LinearLayout>